layout issues fixed for mobile landscape

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1228,7 +1228,7 @@ footer{
         display: flex;
         align-items: center;
         justify-content: center;
-        z-index: 9;
+        z-index: 9999;
         background: rgba($LighterColor, 0);
         box-shadow: 0 0 0 0 rgba(0,0,0,0);
         transition: all 0.2s;
@@ -1537,7 +1537,7 @@ footer{
 }
 
 
-@media screen and (min-width: 340px) and (max-width: 640px) {
+@media screen and (min-width: 340px) and (orientation : landscape) {
     header.expand{
         align-items: flex-start;
         
@@ -1560,6 +1560,10 @@ footer{
             margin: 0 15px 30px;
             max-width: calc(50% - 35px);
         }
+    }
+    .about-page .inner-wrapper .tarkans .tarkan{
+        width: calc(33.333% - 30px);
+        margin: 0 15px 30px;
     }
 }
 
